wip code refactoring